整合百度地图api

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>react 租房系统</title>
+    <script type="text/javascript" 
+    src="https://api.map.baidu.com/api?v=1.0&&type=webgl&ak=jMb4Q4YZKTE5gHGWXvDrjlF0k88qLFT7"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
